fix: tag icon visible only when brand is set

--- a/client/css/_list.scss
+++ b/client/css/_list.scss
@@ -340,6 +340,7 @@ input.lpCategoryName { /* specificity */
     .lpWorn.lpActive,
     .lpConsumable.lpActive,
     .lpCamera.lpActive,
+    .lpTag.lpActive,
     .lpStar.lpStar1,
     .lpStar.lpStar2,
     .lpStar.lpStar3 {
